--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_test_sample">test_sample</string>
+    <string name="title_activity_landing_page">LandingPage</string>
+    <string name="title_activity_photo_editor">PhotoEditor</string>
 </resources>
