--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_test_sample">test_sample</string>
     <string name="title_activity_landing_page">LandingPage</string>
     <string name="title_activity_photo_editor">PhotoEditor</string>
+    <string name="title_activity_collage">Collage</string>
 </resources>
