--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_activity_landing_page">LandingPage</string>
     <string name="title_activity_photo_editor">PhotoEditor</string>
     <string name="title_activity_collage">Collage</string>
+    <string name="title_activity_application">Application</string>
 </resources>
